old-demos/demos/microshift-disconnected/files/manifests/secret-http/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: secret-http
  name: secret-http
spec: {}
