old-demos/demos/microshift-disconnected/files/manifests/secret-http/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: secret-http
  name: secret-http
  namespace: secret-http 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: secret-http
  template:
    metadata:
      labels:
        app: secret-http
    spec:
      containers:
        - name: secret-http
          image: quay.io/luisarizmendi/secret-http:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
