old-demos/demos/microshift-disconnected/files/manifests/secret-http/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secret-http-svc
  namespace: secret-http
spec:
  selector:
    app: secret-http
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
