old-demos/demos/microshift-disconnected/files/manifests/secret-http/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: web
  namespace: secret-http
spec:
  port:
    targetPort: 3000 
  to:
    kind: Service
    name: secret-http-svc
    weight: 10
